# django-contacts

./: README.md  pyproject.toml
django_contacts/: admin.py  apps.py  urls.py  views.py
django_contacts/connectors/: api.py  google.py
django_contacts/migrations/: 0001_initial.py  0002_googleaccount_last_api_called.py  0003_googleaccount_api_call_counter.py  0004_instantmessanger_person_birthday_and_more.py  0005_alter_instantmessanger_im_type_alter_person_nickname.py  0006_phone_phone_type.py  0007_person_photo_base64.py
django_contacts/models/: __init__.py  accounts.py  books.py  person.py  person_connections.py
django_contacts/templates/django_contacts/xml/: list_contacts.xml  multistatus.xml
